# src/main/java/dev/hasangurbuz/flightsearchapi/domain/Currency.java
@@ -1,0 +1,7 @@
+package dev.hasangurbuz.flightsearchapi.domain;
+
+public enum Currency {
+    TRY,
+    USD,
+    EUR
+}
