# src/main/java/dev/hasangurbuz/flightsearchapi/domain/Price.java
@@ -1,0 +1,26 @@
+package dev.hasangurbuz.flightsearchapi.domain;
+
+import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.Setter;
+
+import java.math.BigDecimal;
+
+@Entity
+@Table(name = "t_price")
+@Getter
+@Setter
+public class Price {
+    @Id
+    @SequenceGenerator(name = "t_price_seq", sequenceName = "t_price_seq", allocationSize = 1, initialValue = 1)
+    @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "t_price_seq")
+    @Column(name = "id", nullable = false)
+    private Long id;
+
+    @Column(name = "amount", nullable = false)
+    private BigDecimal amount;
+
+    @Column(name = "currency", nullable = false)
+    private Currency currency;
+
+}
